--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 {% load static %}
+{% load cache %}
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Front page</title>
+    <title>{% block title %}Dart Blog{% endblock %}</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
@@ -21,12 +22,16 @@
 <body>
     <div class="wrapper">
 
-        {% include 'include/_header.html' %}
+        {% cache 20 header %}
+        {% include 'inc/_header.html' %}
+        {% endcache %}
 
         {% block content %}{% endblock %}
 
-        {% include 'include/_footer.html' %}
-        
+        {% cache 20 footer %}
+        {% include 'inc/_footer.html' %}
+        {% endcache %}
+
     </div>
     <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
